--- a/PWIII.Infra.Data/PWIII.Infra.Data.csproj
+++ b/PWIII.Infra.Data/PWIII.Infra.Data.csproj
@@ -1,20 +1,19 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
-    <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <Nullable>enable</Nullable>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="Dapper" Version="2.0.123" />
     <PackageReference Include="Microsoft.Data.SqlClient" Version="5.0.0" />
-    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="6.0.0" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\PWIII.Core\PWIII.Core.csproj" />
-    <ProjectReference Include="..\PWIII.Infra.Data\PWIII.Infra.Data.csproj" />
   </ItemGroup>
 
 </Project>
